--- a/show/index.html
+++ b/show/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IsHaDoEsTeXt | showcase-96</title>
+  <title>IsHaDoEsTeXt | ShowCase-96</title>
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Estonia&display=swap');
 
