--- a/x/index.html
+++ b/x/index.html
@@ -71,7 +71,7 @@ if (window.location.href.includes('=')) {
   <ul class="animate__animated animate__tada">
   <li><a href="#" onclick="sunspot()">🌞</a></li>
   <!-- <li><a href="#" onclick="AIbot()">AI▗</a></li> -->
-  <li><a href="#" onclick="academy()">आकाश🤢</a></li>
+  <li><a href="#">आकाश🔒</a></li>
   <li><a href="#" onclick="coding()">แอพ▝</a></li>
   <br><br>
   </ul>
@@ -225,7 +225,7 @@ fire(0.1, {
 }
 function academy() {
   const sweetAlert = Swal.fire({
-    html: '<center><iframe src="academy/index.html" style="height: 92vh; width: 100%;" scrolling="no" frameBorder="0"></iframe></center>',
+    html: '<center><iframe src="" style="height: 92vh; width: 100%;" scrolling="no" frameBorder="0"></iframe></center>',
     width: '100%',
     height: '100%',
     showConfirmButton: false,
