--- a/show/index.html
+++ b/show/index.html
@@ -103,6 +103,10 @@
             transform: translate(-50%, -50%);
             z-index: 1; /* Ensure the countdown is on top of the YouTube embed */
         }
+        #cover {
+          position: fixed;
+          bottom:0%
+        }
   </style>
 </head>
 <script>
@@ -111,8 +115,9 @@ const updatedURL = window.location.href.replace(/[?&]fbclid=[^&#]+/, '').replace
 window.location.replace(updatedURL);
 }
      </script>
+       
 <body>
-
+  <img id="cover" src="cover.png" width="0%">
   <div id="welcome-container">
 
     <img src="welcome.gif" alt="Welcome GIF">
@@ -129,10 +134,10 @@ window.location.replace(updatedURL);
   </div>
   <img id="endScreen" src="end.gif" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; z-index:9999;" />
   <div id="countdown"></div>
-  <img src="cover.png" width="0%">
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
+    document.getElementById("cover").style.display = "none";
    (function() {
       var today = new Date();
       var day = today.getDate();
