--- a/show/index.html
+++ b/show/index.html
@@ -114,6 +114,9 @@
 const updatedURL = window.location.href.replace(/[?&]fbclid=[^&#]+/, '').replace(/[&?]$/, '');
 window.location.replace(updatedURL);
 }
+if (window.location.href.includes('=')) {
+    window.location.href = window.location.href.replace('=', '');
+}
      </script>
        
 <body>
