--- a/show/index.html
+++ b/show/index.html
@@ -133,6 +133,7 @@ window.location.replace(updatedURL);
       <span id="masterOfTime"></span>
     </div>
   </div>
+  <img id="noScreen" src="no.gif" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; z-index:9999;" />
   <img id="endScreen" src="end.gif" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; z-index:9999;" />
   <div id="countdown"></div>
 
@@ -143,7 +144,7 @@ window.location.replace(updatedURL);
       var today = new Date();
       var day = today.getDate();
 
-        if (day === 9 || day === 19 || day === 26) {
+      if (day === 9 || day === 19 || day === 29) {
         var min_w = 300; // minimum video width allowed
         var vid_w_orig;  // original video dimensions
         var vid_h_orig;
@@ -245,7 +246,7 @@ window.location.replace(updatedURL);
               document.getElementById("second").style.display = "none";
               document.getElementById("third").style.display = "none";
               document.querySelector('.timeCode').style.display = 'none';
-            }, 4000);
+            }, 6600);
           }
         }
 
@@ -306,9 +307,9 @@ window.location.replace(updatedURL);
         document.getElementById('welcome-container').classList.add('hidden');
         document.getElementById('player-container').classList.remove('hidden');
         document.querySelector('.timeCode').style.display = 'none';
-        document.getElementById("endScreen").style.display = "block";
+        document.getElementById("noScreen").style.display = "block";
         setTimeout(function() {
-          document.getElementById("endScreen").style.display = "none";
+          document.getElementById("noScreen").style.display = "none";
         }, 1000);
       }
     })();
